0030745: Visualization, TKOpenGl - fix initialization of GLES3 context

OpenGl_GraphicDriver::InitContext() now tries to initialize GLES3 context
(EGL_CONTEXT_CLIENT_VERSION) and then fallback to GLES2.